# muxfw

./: Cargo.toml  README.md  install.sh
examples/home/.muxwf/: config.yaml
examples/home/.muxwf/plugins/: kubectl.yaml
examples/home/.muxwf/snapshots/: sample-app.json
examples/home/.muxwf/works/: sample-app.yaml
examples/home/.muxwf/workspaces/: demo-suite.yaml
nvim/: README.md
nvim/lua/muxwf/: backend.lua  init.lua  picker.lua  session.lua  util.lua
nvim/plugin/: muxwf.lua
src/: app.rs  autocomplete.rs  cli.rs  context.rs  discover.rs  editor.rs  main.rs  output.rs  paths.rs  plugin.rs  restore.rs  rules.rs  snapshot.rs  tmux.rs  work.rs  workspace.rs
src/commands/: doctor.rs  list.rs  mod.rs  open.rs  work.rs  workspace.rs
tests/: cli_integration.rs  cli_listing.rs  cli_meta.rs  cli_open.rs  cli_work.rs  cli_workspace.rs
tests/common/: mod.rs
